--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<a href="./a.html">Visit A</a>
 	<img src="./logo.png" />
+    <span style="font-weight:bold;">heavy font</span>
 </body>
 </html>
 
