--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    <style>
+        .span-style {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 	<a href="./a.html">Visit A</a>
 	<img src="./logo.png" />
-    <span style="font-weight:bold;">heavy font</span>
+
+    <span class="span-style">Scientific Name<span/>
+        <span class="span-style">Wingspan<span/>
+        <span class="span-style">lifespan<span/>
+        <span class="span-style">habitat<span/>
 </body>
 </html>
 
